<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondodegradado"
    android:padding="40dp"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_login"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="52dp"
            android:scaleX="1.4"
            android:scaleY="1.4"
            android:src="@drawable/logo"
            android:transitionName="logo_trans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto01"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="40dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint01"
            app:hintTextColor="@color/white"
            app:boxStrokeColor="@color/bordecolor"
            app:startIconDrawable="@drawable/img_email"
            app:startIconTint="@color/whiteOpaco"
            app:iconTint="@color/white"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/whiteOpaco">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint02"
            app:hintTextColor="@color/white"
            app:passwordToggleEnabled="true"
            app:boxStrokeColor="@color/bordecolor"
            app:startIconDrawable="@drawable/img_pass"
            app:startIconTint="@color/whiteOpaco"
            app:passwordToggleTint="@color/whiteOpaco"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/whiteOpaco">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/Azulturquesa19"
            android:drawableLeft="@drawable/img_login"
            android:text="@string/boton01"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContraseñaolvidada"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginTop="10dp"
            android:text="@string/boton02"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="10sp"
            android:textColor="@color/white"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_gravity="end"/>

        <TextView
            android:id="@+id/lineaR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lineas"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/googleTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/google"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/login_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="17dp"
            android:backgroundTint="#9C27B0"
            android:text="INGRESAR CON GOOGLE"
            android:textAllCaps="true"
            android:textStyle="bold" />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegistrar"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/boton03"
            android:textAllCaps="false"
            android:textColor="#03A9F4"
            android:textStyle="bold" />


    </LinearLayout>

</ScrollView>