<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".BienvenidoInicio">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Bienvenido"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="match_parent"
        android:layout_height="520dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@drawable/logo"
        android:transitionName="logo_trans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btninicioSesion_Bienvenido"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="@color/Azulturquesa19"
        android:text="@string/texto01"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/morado1d"
        app:layout_constraintBottom_toTopOf="@+id/btnregistro_Bienvenido"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableLeft="@drawable/img_login"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnregistro_Bienvenido"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:backgroundTint="@color/Azulturquesa19"
        android:text="@string/boton03"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/morado1d"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableLeft="@drawable/img_registrate"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>