<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="65dp"
    android:background="@drawable/fondotabique"
    tools:context=".AgregarNoticia">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto04"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"/>

        <ImageView
            android:id="@+id/logo_noticia"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="22dp"
            android:scaleX="1.4"
            android:scaleY="1.4"
            android:src="@drawable/noticia_nueva"
            android:transitionName="logo_trans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        
        <TextView
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Titulo:"
            android:textColor="@color/white"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/hint06"
        app:hintTextColor="@color/white"
        app:startIconDrawable="@drawable/img_text"
        app:startIconTint="@color/whiteOpaco"
        app:iconTint="@color/white"
        app:boxStrokeColor="@color/bordecolor"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/whiteOpaco">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:textColor="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Descripción:"
            android:textColor="@color/white"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descripcion"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/hint07"
            android:textColorHint="@color/whiteOpaco"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/bordecolor"
            app:hintTextColor="@color/white"
            app:iconTint="@color/white"
            app:startIconDrawable="@drawable/img_text"
            app:startIconTint="@color/whiteOpaco">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:text="Añade una imagen"
            android:layout_marginTop="40dp" />


        <ImageView
            android:id="@+id/btnAgregarimagen"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:onClick="openCamera"
            android:src="@android:drawable/ic_menu_gallery"/>


        <RelativeLayout
            android:id="@+id/relative"
            android:layout_margin="10dp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ImagenNoticia"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>

        </RelativeLayout>


        <Button
            android:id="@+id/btnSubirNoticia"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:text="@string/boton13"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="70dp"
            android:drawableLeft="@drawable/img_subir"
            android:backgroundTint="@color/red_c3"
            android:layout_gravity="center"/>

    </LinearLayout>

</ScrollView>
